tests/ui/discord-frontend/entity_macro/expected_assume.stderr
error: expected `assume`
  --> tests/ui/discord-frontend/entity_macro/expected_assume.rs:34:5
   |
LL |     expected_assume = [],
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

